Dodaden e del za obrabotka na meta podatoci

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <receiver android:name=".AlarmReceiver" />
 
-        <activity android:name=".Alarm2" />
+        <activity android:name=".Alarm" />
         <activity android:name=".YouTube" />
     </application>
 
